--- a/index.html
+++ b/index.html
@@ -1,108 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Home Maintenance & Handyman Services | Askern & Doncaster DN6</title>
 <meta name="description" content="Reliable property maintenance and handyman services in Askern & Doncaster DN6. Gutter repairs, UPVC restoration, gardening, fencing, pressure washing, exterior carpentry, and decorating. Affordable, local, and professional.">
 <link rel="canonical" href="https://steely1968.github.io/">
 
+<!-- Preload Logo -->
+<link rel="preload" href="/logo.webp" as="image">
+
 <!-- Open Graph -->
 <meta property="og:title" content="Home Maintenance & Handyman Services | Askern & Doncaster DN6">
-<meta property="og:description" content="Professional property maintenance and handyman services in Askern & Doncaster DN6. Gutter cleaning, fencing, pressure washing, exterior decorating, gardening, and more.">
+<meta property="og:description" content="Professional property maintenance services in Doncaster DN6 – gutters, fencing, UPVC, gardening, carpentry, decorating and more.">
 <meta property="og:url" content="https://steely1968.github.io/">
-<meta property="og:image" content="/logo.png">
+<meta property="og:image" content="/logo.webp">
 <meta name="twitter:card" content="summary_large_image">
 
+<!-- Minified CSS -->
 <style>
-body{margin:0;font-family:Arial,sans-serif;line-height:1.6;color:#000;background:#fff;}
-header{display:flex;align-items:center;justify-content:space-between;padding:15px 20px;background:#f4f4f4;border-bottom:2px solid #ddd;}
-header img{height:90px;}
-nav{display:flex;align-items:center;gap:15px;}
-nav a{font-weight:bold;text-decoration:none;padding:10px 16px;border-radius:6px;color:#000;}
-nav a:hover{background:#e2e2e2;}
-.call-button{background-color:#1a7f33;color:#fff;}
-.call-button:hover{background-color:#166b2b;}
-main{padding:20px;max-width:1000px;margin:auto;}
-h1,h2{margin-top:10px;}
-ul{padding-left:20px;}
-.service-list a{display:block;background:#f8f8f8;padding:14px 18px;margin:12px 0;border-radius:8px;border:1px solid #ddd;text-decoration:none;color:#000;font-size:17px;font-weight:bold;transition:0.25s;}
-.service-list a:hover{background:#e8ffe8;border-color:#28a745;transform:translateX(4px);}
-.quick-facts{background:#f8f8f8;padding:20px;border-radius:10px;border:1px solid #ddd;margin:25px 0;}
-.quick-facts ul{padding-left:20px;}
-footer{padding:25px;text-align:center;font-size:14px;color:#666;border-top:1px solid #ddd;}
-footer a{color:#1864d8;font-weight:bold;text-decoration:none;}
-footer a:hover{text-decoration:underline;}
+body{margin:0;font-family:Arial,sans-serif;line-height:1.6;color:#000;background:#fff}
+header{display:flex;align-items:center;justify-content:space-between;padding:15px 20px;background:#f4f4f4;border-bottom:2px solid #ddd}
+header img{height:90px;width:auto}
+nav{display:flex;align-items:center;gap:15px}
+nav a{font-weight:bold;text-decoration:none;padding:10px 16px;border-radius:6px;color:#000;transition:.25s}
+nav a:hover{background:#e2e2e2}
+.call-button{background:#1a7f33;color:#fff}
+.call-button:hover{background:#166b2b}
+main{padding:20px;max-width:1000px;margin:auto}
+h1,h2{margin-top:10px}
+ul{padding-left:20px}
+.service-list a{display:block;background:#f8f8f8;padding:14px 18px;margin:12px 0;border-radius:8px;border:1px solid #ddd;text-decoration:none;color:#000;font-size:17px;font-weight:bold;transition:.25s}
+.service-list a:hover{background:#e8ffe8;border-color:#28a745;transform:translateX(4px)}
+.quick-facts{background:#f8f8f8;padding:20px;border-radius:10px;border:1px solid #ddd;margin:25px 0}
+footer{padding:25px;text-align:center;font-size:14px;color:#666;border-top:1px solid #ddd}
+footer a{color:#1864d8;font-weight:bold;text-decoration:none}
+footer a:hover{text-decoration:underline}
 </style>
-
-<!-- LocalBusiness Schema -->
-<script type="application/ld+json">
-{
-"@context": "https://schema.org",
-"@type": "LocalBusiness",
-"name": "Home Maintenance Services",
-"image": "https://steely1968.github.io/logo.png",
-"url": "https://steely1968.github.io/",
-"telephone": "+447735873694",
-"priceRange": "£",
-"address": {
-"@type": "PostalAddress",
-"streetAddress": "35 Airstone Road",
-"addressLocality": "Askern",
-"addressRegion": "Doncaster",
-"postalCode": "DN6 0QA",
-"addressCountry": "UK"
-},
-"geo": {
-"@type": "GeoCoordinates",
-"latitude": 53.616,
-"longitude": -1.153
-},
-"openingHoursSpecification": [{
-"@type": "OpeningHoursSpecification",
-"dayOfWeek": ["Monday","Tuesday","Wednesday","Thursday","Friday","Saturday"],
-"opens": "08:00",
-"closes": "18:00"
-}]
-}
-</script>
-
-<!-- Homepage FAQ Schema -->
-<script type="application/ld+json">
-{
-"@context": "https://schema.org",
-"@type": "FAQPage",
-"mainEntity": [
-{
-"@type": "Question",
-"name": "Which services do you offer?",
-"acceptedAnswer": { "@type": "Answer", "text": "We provide gutter cleaning, gutter repairs and replacements, UPVC restoration, gardening services, exterior carpentry, fence construction and repairs, pressure washing, and exterior decorating." }
-},
-{
-"@type": "Question",
-"name": "Do you serve Askern and Doncaster DN6?",
-"acceptedAnswer": { "@type": "Answer", "text": "Yes, we are a local handyman service covering Askern, Doncaster DN6, and surrounding areas." }
-},
-{
-"@type": "Question",
-"name": "Do you charge call-out fees?",
-"acceptedAnswer": { "@type": "Answer", "text": "No, we never charge a call-out fee." }
-},
-{
-"@type": "Question",
-"name": "Can you handle small jobs as well as larger projects?",
-"acceptedAnswer": { "@type": "Answer", "text": "Yes, we handle jobs of all sizes, from minor repairs to full property maintenance projects." }
-}
-]
-}
-</script>
 
 </head>
 <body>
 
 <header>
-<img src="/logo.png" alt="Home Maintenance Services Logo">
+<img src="/logo.webp" loading="lazy" alt="Home Maintenance Services Logo">
 <nav>
 <a href="/">Home</a>
 <a href="/contact">Contact</a>
@@ -146,16 +86,48 @@ footer a:hover{text-decoration:underline;}
 </main>
 
 <footer>
-<p>
-&copy; <span id="currentYear"></span> Home Maintenance Services – Askern, Doncaster DN6
-</p>
-<p>
-<a href="https://www.facebook.com/profile.php?id=61584395621256" target="_blank" rel="noopener noreferrer">Visit our Facebook Profile</a>
-</p>
+<p>&copy; <span id="currentYear"></span> Home Maintenance Services – Askern, Doncaster DN6</p>
+<p><a href="https://www.facebook.com/profile.php?id=61584395621256" target="_blank" rel="noopener noreferrer">Visit our Facebook Profile</a></p>
 </footer>
 
 <script>
 document.getElementById("currentYear").textContent = new Date().getFullYear();
+</script>
+
+<!-- JSON-LD moved to bottom for faster rendering -->
+<script type="application/ld+json">
+{
+"@context":"https://schema.org",
+"@type":"LocalBusiness",
+"name":"Home Maintenance Services",
+"image":"https://steely1968.github.io/logo.webp",
+"url":"https://steely1968.github.io/",
+"telephone":"+447735873694",
+"priceRange":"£",
+"address":{
+"@type":"PostalAddress",
+"streetAddress":"35 Airstone Road",
+"addressLocality":"Askern",
+"addressRegion":"Doncaster",
+"postalCode":"DN6 0QA",
+"addressCountry":"UK"
+},
+"geo":{"@type":"GeoCoordinates","latitude":53.616,"longitude":-1.153},
+"openingHoursSpecification":[{"@type":"OpeningHoursSpecification","dayOfWeek":["Monday","Tuesday","Wednesday","Thursday","Friday","Saturday"],"opens":"08:00","closes":"18:00"}]
+}
+</script>
+
+<script type="application/ld+json">
+{
+"@context":"https://schema.org",
+"@type":"FAQPage",
+"mainEntity":[
+{"@type":"Question","name":"Which services do you offer?","acceptedAnswer":{"@type":"Answer","text":"We provide gutter cleaning, gutter repairs and replacements, UPVC restoration, gardening services, exterior carpentry, fence construction and repairs, pressure washing, and exterior decorating."}},
+{"@type":"Question","name":"Do you serve Askern and Doncaster DN6?","acceptedAnswer":{"@type":"Answer","text":"Yes, we are a local handyman service covering Askern, Doncaster DN6, and surrounding areas."}},
+{"@type":"Question","name":"Do you charge call-out fees?","acceptedAnswer":{"@type":"Answer","text":"No, we never charge a call-out fee."}},
+{"@type":"Question","name":"Can you handle small jobs as well as larger projects?","acceptedAnswer":{"@type":"Answer","text":"Yes, we handle jobs of all sizes, from minor repairs to full property maintenance projects."}}
+]
+}
 </script>
 
 </body>
