--- a/index.html
+++ b/index.html
@@ -2,39 +2,36 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Home Maintenance & Handyman Services | Askern & Doncaster DN6</title>
-<meta name="description" content="Reliable property maintenance and handyman services in Askern & Doncaster DN6. Gutter repairs, UPVC restoration, gardening, fencing, pressure washing, exterior carpentry, and decorating. Affordable, local, and professional.">
-<link rel="canonical" href="https://steely1968.github.io/">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Handyman & Home Maintenance | Askern & Doncaster DN6</title>
+<meta name="description" content="Local handyman and property maintenance services in Askern & Doncaster DN6. Reliable gutter repairs, UPVC restoration, gardening, fencing, carpentry, decorating, and pressure washing. No call-out fees.">
 
-<!-- Preload Logo -->
+<link rel="canonical" href="https://steely1968.github.io/">
 <link rel="preload" href="/logo.webp" as="image">
 
-<!-- Open Graph -->
-<meta property="og:title" content="Home Maintenance & Handyman Services | Askern & Doncaster DN6">
-<meta property="og:description" content="Professional property maintenance services in Doncaster DN6 – gutters, fencing, UPVC, gardening, carpentry, decorating and more.">
-<meta property="og:url" content="https://steely1968.github.io/">
+<meta property="og:title" content="Handyman & Home Maintenance | Askern & Doncaster DN6">
+<meta property="og:description" content="Local handyman services including guttering, fencing, UPVC restoration, gardening, carpentry, pressure washing and more.">
 <meta property="og:image" content="/logo.webp">
+<meta property="og:url" content="https://steely1968.github.io/">
 <meta name="twitter:card" content="summary_large_image">
 
-<!-- Minified CSS -->
+<!-- CRITICAL CSS (minified) -->
 <style>
-body{margin:0;font-family:Arial,sans-serif;line-height:1.6;color:#000;background:#fff}
-header{display:flex;align-items:center;justify-content:space-between;padding:15px 20px;background:#f4f4f4;border-bottom:2px solid #ddd}
-header img{height:90px;width:auto}
-nav{display:flex;align-items:center;gap:15px}
-nav a{font-weight:bold;text-decoration:none;padding:10px 16px;border-radius:6px;color:#000;transition:.25s}
+body{margin:0;font-family:Arial,Helvetica,sans-serif;line-height:1.55;color:#111;background:#fff}
+header{display:flex;align-items:center;justify-content:space-between;padding:12px 18px;background:#f4f4f4;border-bottom:1px solid #ddd}
+header img{height:80px;width:180px;object-fit:contain}
+nav{display:flex;gap:12px}
+nav a{text-decoration:none;font-weight:600;color:#000;padding:8px 14px;border-radius:6px}
 nav a:hover{background:#e2e2e2}
-.call-button{background:#1a7f33;color:#fff}
-.call-button:hover{background:#166b2b}
-main{padding:20px;max-width:1000px;margin:auto}
-h1,h2{margin-top:10px}
-ul{padding-left:20px}
-.service-list a{display:block;background:#f8f8f8;padding:14px 18px;margin:12px 0;border-radius:8px;border:1px solid #ddd;text-decoration:none;color:#000;font-size:17px;font-weight:bold;transition:.25s}
+.call-btn{background:#1a7f33;color:#fff}
+.call-btn:hover{background:#166b2b}
+main{padding:18px;max-width:900px;margin:auto}
+h1,h2{margin:12px 0}
+.service-list a{display:block;padding:14px 16px;margin:10px 0;background:#fafafa;border-radius:8px;border:1px solid #ddd;text-decoration:none;color:#000;font-weight:600;transition:.25s}
 .service-list a:hover{background:#e8ffe8;border-color:#28a745;transform:translateX(4px)}
-.quick-facts{background:#f8f8f8;padding:20px;border-radius:10px;border:1px solid #ddd;margin:25px 0}
-footer{padding:25px;text-align:center;font-size:14px;color:#666;border-top:1px solid #ddd}
-footer a{color:#1864d8;font-weight:bold;text-decoration:none}
+.quick-facts{background:#fafafa;border:1px solid #ddd;border-radius:10px;padding:18px;margin-top:20px}
+footer{text-align:center;padding:20px;font-size:14px;color:#666;border-top:1px solid #ddd}
+footer a{color:#1864d8;text-decoration:none;font-weight:600}
 footer a:hover{text-decoration:underline}
 </style>
 
@@ -42,21 +39,20 @@ footer a:hover{text-decoration:underline}
 <body>
 
 <header>
-<img src="/logo.webp" loading="lazy" alt="Home Maintenance Services Logo">
+<img src="/logo.webp" loading="eager" width="180" height="80" alt="Home Maintenance Services Logo">
 <nav>
 <a href="/">Home</a>
 <a href="/contact">Contact</a>
-<a href="tel:07735873694" class="call-button">Call 07735 873694</a>
+<a href="tel:07735873694" class="call-btn">07735 873694</a>
 </nav>
 </header>
 
 <main>
-<h1>Professional Handyman & Property Maintenance Services in Askern & Doncaster (DN6)</h1>
+<h1>Handyman & Property Maintenance Services in Askern & Doncaster (DN6)</h1>
 
-<p>We provide reliable, local, and affordable property maintenance solutions. Our skilled handyman services help keep your home or business safe, functional, and looking great.</p>
+<p>Affordable and reliable home maintenance services covering Askern and Doncaster DN6. No call-out fees, fast response, and quality workmanship.</p>
 
-<h2>Our Services</h2>
-
+<h2>Services We Offer</h2>
 <div class="service-list">
 <a href="/our-services/gutter-replacement-repairs-clearing">Gutter Replacement, Repairs & Cleaning</a>
 <a href="/our-services/upvc-restoration">UPVC Restoration</a>
@@ -67,34 +63,30 @@ footer a:hover{text-decoration:underline}
 <a href="/our-services/exterior-decorating">Exterior Decorating</a>
 </div>
 
-<h2>Why Choose Home Maintenance Services?</h2>
+<h2>Why Choose Us?</h2>
 <div class="quick-facts">
 <ul>
-<li>Local handyman service in Askern & Doncaster DN6</li>
-<li>No call-out fees and transparent pricing</li>
-<li>Experienced in small repairs and large maintenance projects</li>
-<li>Fully insured, professional, and reliable</li>
-<li>Friendly service with attention to detail</li>
-<li>Quick response and same-day service for many small jobs</li>
+<li>Local service in Askern & Doncaster DN6</li>
+<li>No call-out fees — ever</li>
+<li>Professional, experienced, and fully insured</li>
+<li>Friendly service and quality workmanship</li>
+<li>Same-day availability for many small jobs</li>
 </ul>
 </div>
 
-<h2>Contact Us Today</h2>
-<p>For advice, a free quote, or to book any of our services, get in touch now.</p>
-<p><strong>Call:</strong> <a href="tel:07735873694">07735 873694</a></p>
-
+<h2>Need Help?</h2>
+<p>For quotes or advice, call us today.</p>
+<p><strong>Phone:</strong> <a href="tel:07735873694">07735 873694</a></p>
 </main>
 
 <footer>
-<p>&copy; <span id="currentYear"></span> Home Maintenance Services – Askern, Doncaster DN6</p>
-<p><a href="https://www.facebook.com/profile.php?id=61584395621256" target="_blank" rel="noopener noreferrer">Visit our Facebook Profile</a></p>
+<p>&copy; <span id="year"></span> Home Maintenance Services – Askern, Doncaster DN6</p>
+<p><a href="https://www.facebook.com/profile.php?id=61584395621256" target="_blank" rel="noopener">Facebook Profile</a></p>
 </footer>
 
-<script>
-document.getElementById("currentYear").textContent = new Date().getFullYear();
-</script>
+<script>document.getElementById("year").textContent=new Date().getFullYear();</script>
 
-<!-- JSON-LD moved to bottom for faster rendering -->
+<!-- LocalBusiness Schema -->
 <script type="application/ld+json">
 {
 "@context":"https://schema.org",
@@ -113,19 +105,41 @@ document.getElementById("currentYear").textContent = new Date().getFullYear();
 "addressCountry":"UK"
 },
 "geo":{"@type":"GeoCoordinates","latitude":53.616,"longitude":-1.153},
-"openingHoursSpecification":[{"@type":"OpeningHoursSpecification","dayOfWeek":["Monday","Tuesday","Wednesday","Thursday","Friday","Saturday"],"opens":"08:00","closes":"18:00"}]
+"openingHoursSpecification":[{
+"@type":"OpeningHoursSpecification",
+"dayOfWeek":["Monday","Tuesday","Wednesday","Thursday","Friday","Saturday"],
+"opens":"08:00",
+"closes":"18:00"
+}]
 }
 </script>
 
+<!-- FAQ Schema -->
 <script type="application/ld+json">
 {
 "@context":"https://schema.org",
 "@type":"FAQPage",
 "mainEntity":[
-{"@type":"Question","name":"Which services do you offer?","acceptedAnswer":{"@type":"Answer","text":"We provide gutter cleaning, gutter repairs and replacements, UPVC restoration, gardening services, exterior carpentry, fence construction and repairs, pressure washing, and exterior decorating."}},
-{"@type":"Question","name":"Do you serve Askern and Doncaster DN6?","acceptedAnswer":{"@type":"Answer","text":"Yes, we are a local handyman service covering Askern, Doncaster DN6, and surrounding areas."}},
-{"@type":"Question","name":"Do you charge call-out fees?","acceptedAnswer":{"@type":"Answer","text":"No, we never charge a call-out fee."}},
-{"@type":"Question","name":"Can you handle small jobs as well as larger projects?","acceptedAnswer":{"@type":"Answer","text":"Yes, we handle jobs of all sizes, from minor repairs to full property maintenance projects."}}
+{
+"@type":"Question",
+"name":"Which services do you offer?",
+"acceptedAnswer":{"@type":"Answer","text":"We provide gutter cleaning, gutter repairs, UPVC restoration, gardening, exterior carpentry, fencing, pressure washing and exterior decorating."}
+},
+{
+"@type":"Question",
+"name":"Do you serve Askern and Doncaster DN6?",
+"acceptedAnswer":{"@type":"Answer","text":"Yes — we cover Askern, Doncaster DN6 and surrounding areas."}
+},
+{
+"@type":"Question",
+"name":"Do you charge call-out fees?",
+"acceptedAnswer":{"@type":"Answer","text":"No. We never charge call-out fees."}
+},
+{
+"@type":"Question",
+"name":"Do you handle small jobs?",
+"acceptedAnswer":{"@type":"Answer","text":"Yes — we take on all jobs, big or small, from quick repairs to full property maintenance."}
+}
 ]
 }
 </script>
