--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 <meta name="description" content="Local handyman and property maintenance services in Askern & Doncaster DN6. Reliable gutter repairs, UPVC restoration, gardening, fencing, carpentry, decorating, and pressure washing. No call-out fees.">
 
 <link rel="canonical" href="https://steely1968.github.io/">
-<link rel="preload" href="/logo.webp" as="image">
+<link rel="preload" href="/images/logo.webp" as="image">
 
 <meta property="og:title" content="Handyman & Home Maintenance | Askern & Doncaster DN6">
 <meta property="og:description" content="Local handyman services including guttering, fencing, UPVC restoration, gardening, carpentry, pressure washing and more.">
-<meta property="og:image" content="/logo.webp">
+<meta property="og:image" content="/images/logo.webp">
 <meta property="og:url" content="https://steely1968.github.io/">
 <meta name="twitter:card" content="summary_large_image">
 
@@ -92,7 +92,7 @@ footer a:hover{text-decoration:underline}
 "@context":"https://schema.org",
 "@type":"LocalBusiness",
 "name":"Home Maintenance Services",
-"image":"https://steely1968.github.io/logo.webp",
+"image":"https://steely1968.github.io/images/logo.webp",
 "url":"https://steely1968.github.io/",
 "telephone":"+447735873694",
 "priceRange":"£",
