--- a/index.html
+++ b/index.html
@@ -4,143 +4,102 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Handyman & Home Maintenance | Askern & Doncaster DN6</title>
-<meta name="description" content="Local handyman and property maintenance services in Askern & Doncaster DN6. Reliable gutter repairs, UPVC restoration, gardening, fencing, carpentry, decorating, and pressure washing. No call-out fees.">
 
+<meta name="description" content="Local handyman and home maintenance services including fencing, gutter repairs, joinery, plumbing, painting, landscaping and more across Askern, Doncaster (DN6) and surrounding areas.">
 <link rel="canonical" href="https://steely1968.github.io/">
-<link rel="preload" href="/logo.webp" as="image">
 
+<!-- Preload logo for faster header paint -->
+<link rel="preload" href="images/logo.webp" as="image" type="image/webp">
+
+<!-- Open Graph for sharing -->
 <meta property="og:title" content="Handyman & Home Maintenance | Askern & Doncaster DN6">
-<meta property="og:description" content="Local handyman services including guttering, fencing, UPVC restoration, gardening, carpentry, pressure washing and more.">
-<meta property="og:image" content="/logo.webp">
+<meta property="og:description" content="Reliable handyman and property maintenance services across Askern & Doncaster.">
+<meta property="og:image" content="https://steely1968.github.io/images/logo.webp">
 <meta property="og:url" content="https://steely1968.github.io/">
 <meta name="twitter:card" content="summary_large_image">
 
-<!-- CRITICAL CSS (minified) -->
+<!-- Minified critical CSS -->
 <style>
 body{margin:0;font-family:Arial,Helvetica,sans-serif;line-height:1.55;color:#111;background:#fff}
-header{display:flex;align-items:center;justify-content:space-between;padding:12px 18px;background:#f4f4f4;border-bottom:1px solid #ddd}
-header img{height:80px;width:180px;object-fit:contain}
-nav{display:flex;gap:12px}
-nav a{text-decoration:none;font-weight:600;color:#000;padding:8px 14px;border-radius:6px}
-nav a:hover{background:#e2e2e2}
-.call-btn{background:#1a7f33;color:#fff}
-.call-btn:hover{background:#166b2b}
-main{padding:18px;max-width:900px;margin:auto}
-h1,h2{margin:12px 0}
-.service-list a{display:block;padding:14px 16px;margin:10px 0;background:#fafafa;border-radius:8px;border:1px solid #ddd;text-decoration:none;color:#000;font-weight:600;transition:.25s}
-.service-list a:hover{background:#e8ffe8;border-color:#28a745;transform:translateX(4px)}
-.quick-facts{background:#fafafa;border:1px solid #ddd;border-radius:10px;padding:18px;margin-top:20px}
-footer{text-align:center;padding:20px;font-size:14px;color:#666;border-top:1px solid #ddd}
-footer a{color:#1864d8;text-decoration:none;font-weight:600}
-footer a:hover{text-decoration:underline}
+header{display:flex;align-items:center;justify-content:space-between;padding:15px 20px;background:#f4f4f4;border-bottom:2px solid #ddd}
+header img{max-width:160px;height:auto}
+nav a{margin:0 10px;text-decoration:none;color:#333;font-weight:600}
+nav a:hover{color:#000;text-decoration:underline}
+.hero{padding:60px 20px;text-align:center;background:#e8eef9}
+.hero h1{font-size:2.2rem;margin:0 0 15px}
+.hero p{font-size:1.1rem;max-width:700px;margin:0 auto}
+.container{max-width:1000px;margin:40px auto;padding:0 20px}
+h2{border-left:5px solid #3a6db4;padding-left:10px}
+ul{padding-left:20px}
+footer{text-align:center;padding:20px;margin-top:40px;background:#f4f4f4;border-top:2px solid #ddd}
 </style>
-
 </head>
+
 <body>
 
 <header>
-<img src="/logo.webp" loading="eager" width="180" height="80" alt="Home Maintenance Services Logo">
+<img src="images/logo.webp" alt="Home Maintenance Services Logo">
 <nav>
-<a href="/">Home</a>
-<a href="/contact">Contact</a>
-<a href="tel:07735873694" class="call-btn">07735 873694</a>
+<a href="index.html">Home</a>
+<a href="our-services/">Services</a>
+<a href="location/">Locations</a>
+<a href="contact.html">Contact</a>
 </nav>
 </header>
 
-<main>
-<h1>Handyman & Property Maintenance Services in Askern & Doncaster (DN6)</h1>
+<section class="hero">
+<h1>Your Local Handyman in Askern & Doncaster (DN6)</h1>
+<p>Fast, reliable and affordable home maintenance, repairs, joinery, plumbing, fencing, outdoor work, painting and more — carried out with pride and professionalism.</p>
+</section>
 
-<p>Affordable and reliable home maintenance services covering Askern and Doncaster DN6. No call-out fees, fast response, and quality workmanship.</p>
-
-<h2>Services We Offer</h2>
-<div class="service-list">
-<a href="/our-services/gutter-replacement-repairs-clearing">Gutter Replacement, Repairs & Cleaning</a>
-<a href="/our-services/upvc-restoration">UPVC Restoration</a>
-<a href="/our-services/gardening-services">Gardening Services</a>
-<a href="/our-services/exterior-carpentry">Exterior Carpentry</a>
-<a href="/our-services/fence-construction-repairs">Fence Construction & Repairs</a>
-<a href="/our-services/pressure-washing">Pressure Washing</a>
-<a href="/our-services/exterior-decorating">Exterior Decorating</a>
-</div>
-
-<h2>Why Choose Us?</h2>
-<div class="quick-facts">
+<div class="container">
+<h2>✔ Services Offered</h2>
 <ul>
-<li>Local service in Askern & Doncaster DN6</li>
-<li>No call-out fees — ever</li>
-<li>Professional, experienced, and fully insured</li>
-<li>Friendly service and quality workmanship</li>
-<li>Same-day availability for many small jobs</li>
+<li>Fencing & gates</li>
+<li>Gutter repairs & cleaning</li>
+<li>Painting & decorating</li>
+<li>Flat-pack assembly</li>
+<li>Basic plumbing & leak fixes</li>
+<li>Joinery & woodwork repairs</li>
+<li>Outdoor maintenance & garden tidying</li>
+<li>Shed repairs & installation</li>
+<li>General home repairs</li>
 </ul>
-</div>
 
-<h2>Need Help?</h2>
-<p>For quotes or advice, call us today.</p>
-<p><strong>Phone:</strong> <a href="tel:07735873694">07735 873694</a></p>
-</main>
+<h2>✔ Why Choose Us?</h2>
+<ul>
+<li>Reliable local handyman based in Askern</li>
+<li>Affordable prices</li>
+<li>Fast response time</li>
+<li>Friendly, professional service</li>
+<li>No job too small</li>
+</ul>
+
+<p>For quotes, bookings or enquiries, visit the <a href="contact.html">contact page</a>.</p>
+</div>
 
 <footer>
-<p>&copy; <span id="year"></span> Home Maintenance Services – Askern, Doncaster DN6</p>
-<p><a href="https://www.facebook.com/profile.php?id=61584395621256" target="_blank" rel="noopener">Facebook Profile</a></p>
+© 2025 Handyman Services | Askern & Doncaster (DN6)
 </footer>
 
-<script>document.getElementById("year").textContent=new Date().getFullYear();</script>
-
-<!-- LocalBusiness Schema -->
+<!-- JSON-LD Schema (moved to bottom for faster paint) -->
 <script type="application/ld+json">
 {
 "@context":"https://schema.org",
 "@type":"LocalBusiness",
-"name":"Home Maintenance Services",
-"image":"https://steely1968.github.io/logo.webp",
-"url":"https://steely1968.github.io/",
-"telephone":"+447735873694",
-"priceRange":"£",
+"name":"Handyman & Home Maintenance",
+"image":"https://steely1968.github.io/images/logo.webp",
 "address":{
 "@type":"PostalAddress",
-"streetAddress":"35 Airstone Road",
 "addressLocality":"Askern",
 "addressRegion":"Doncaster",
-"postalCode":"DN6 0QA",
+"postalCode":"DN6",
 "addressCountry":"UK"
 },
-"geo":{"@type":"GeoCoordinates","latitude":53.616,"longitude":-1.153},
-"openingHoursSpecification":[{
-"@type":"OpeningHoursSpecification",
-"dayOfWeek":["Monday","Tuesday","Wednesday","Thursday","Friday","Saturday"],
-"opens":"08:00",
-"closes":"18:00"
-}]
-}
-</script>
-
-<!-- FAQ Schema -->
-<script type="application/ld+json">
-{
-"@context":"https://schema.org",
-"@type":"FAQPage",
-"mainEntity":[
-{
-"@type":"Question",
-"name":"Which services do you offer?",
-"acceptedAnswer":{"@type":"Answer","text":"We provide gutter cleaning, gutter repairs, UPVC restoration, gardening, exterior carpentry, fencing, pressure washing and exterior decorating."}
-},
-{
-"@type":"Question",
-"name":"Do you serve Askern and Doncaster DN6?",
-"acceptedAnswer":{"@type":"Answer","text":"Yes — we cover Askern, Doncaster DN6 and surrounding areas."}
-},
-{
-"@type":"Question",
-"name":"Do you charge call-out fees?",
-"acceptedAnswer":{"@type":"Answer","text":"No. We never charge call-out fees."}
-},
-{
-"@type":"Question",
-"name":"Do you handle small jobs?",
-"acceptedAnswer":{"@type":"Answer","text":"Yes — we take on all jobs, big or small, from quick repairs to full property maintenance."}
-}
-]
+"description":"Local handyman and property maintenance services in Askern & Doncaster.",
+"url":"https://steely1968.github.io/",
+"areaServed":"DN6, Doncaster, South Yorkshire",
+"serviceType":"Handyman Services"
 }
 </script>
 
