--- a/index.html
+++ b/index.html
@@ -3,35 +3,19 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Handyman & Home Maintenance | Askern & Doncaster DN6</title>
+<title>Handyman Services</title>
 
-<meta name="description" content="Local handyman and home maintenance services including fencing, gutter repairs, joinery, plumbing, painting, landscaping and more across Askern, Doncaster (DN6) and surrounding areas.">
-<link rel="canonical" href="https://steely1968.github.io/">
-
-<!-- Preload logo for faster header paint -->
+<!-- Preload logo -->
 <link rel="preload" href="images/logo.webp" as="image" type="image/webp">
 
-<!-- Open Graph for sharing -->
-<meta property="og:title" content="Handyman & Home Maintenance | Askern & Doncaster DN6">
-<meta property="og:description" content="Reliable handyman and property maintenance services across Askern & Doncaster.">
-<meta property="og:image" content="https://steely1968.github.io/images/logo.webp">
-<meta property="og:url" content="https://steely1968.github.io/">
-<meta name="twitter:card" content="summary_large_image">
-
-<!-- Minified critical CSS -->
+<!-- Basic styling for header + footer -->
 <style>
 body{margin:0;font-family:Arial,Helvetica,sans-serif;line-height:1.55;color:#111;background:#fff}
 header{display:flex;align-items:center;justify-content:space-between;padding:15px 20px;background:#f4f4f4;border-bottom:2px solid #ddd}
 header img{max-width:160px;height:auto}
 nav a{margin:0 10px;text-decoration:none;color:#333;font-weight:600}
-nav a:hover{color:#000;text-decoration:underline}
-.hero{padding:60px 20px;text-align:center;background:#e8eef9}
-.hero h1{font-size:2.2rem;margin:0 0 15px}
-.hero p{font-size:1.1rem;max-width:700px;margin:0 auto}
-.container{max-width:1000px;margin:40px auto;padding:0 20px}
-h2{border-left:5px solid #3a6db4;padding-left:10px}
-ul{padding-left:20px}
-footer{text-align:center;padding:20px;margin-top:40px;background:#f4f4f4;border-top:2px solid #ddd}
+nav a:hover{text-decoration:underline;color:#000}
+footer{text-align:center;padding:20px;background:#f4f4f4;border-top:2px solid #ddd;margin-top:40px}
 </style>
 </head>
 
@@ -40,68 +24,22 @@ footer{text-align:center;padding:20px;margin-top:40px;background:#f4f4f4;border-
 <header>
 <img src="images/logo.webp" alt="Home Maintenance Services Logo">
 <nav>
-<a href="index.html">Home</a>
-<a href="our-services/">Services</a>
-<a href="location/">Locations</a>
-<a href="contact.html">Contact</a>
+<a href="/index.html">Home</a>
+<a href="/our-services/">Services</a>
+<a href="/location/">Locations</a>
+<a href="/contact.html">Contact</a>
 </nav>
 </header>
 
-<section class="hero">
-<h1>Your Local Handyman in Askern & Doncaster (DN6)</h1>
-<p>Fast, reliable and affordable home maintenance, repairs, joinery, plumbing, fencing, outdoor work, painting and more — carried out with pride and professionalism.</p>
-</section>
+<!-- PAGE CONTENT STARTS HERE -->
+<main>
 
-<div class="container">
-<h2>✔ Services Offered</h2>
-<ul>
-<li>Fencing & gates</li>
-<li>Gutter repairs & cleaning</li>
-<li>Painting & decorating</li>
-<li>Flat-pack assembly</li>
-<li>Basic plumbing & leak fixes</li>
-<li>Joinery & woodwork repairs</li>
-<li>Outdoor maintenance & garden tidying</li>
-<li>Shed repairs & installation</li>
-<li>General home repairs</li>
-</ul>
-
-<h2>✔ Why Choose Us?</h2>
-<ul>
-<li>Reliable local handyman based in Askern</li>
-<li>Affordable prices</li>
-<li>Fast response time</li>
-<li>Friendly, professional service</li>
-<li>No job too small</li>
-</ul>
-
-<p>For quotes, bookings or enquiries, visit the <a href="contact.html">contact page</a>.</p>
-</div>
+</main>
+<!-- PAGE CONTENT ENDS HERE -->
 
 <footer>
 © 2025 Handyman Services | Askern & Doncaster (DN6)
 </footer>
-
-<!-- JSON-LD Schema (moved to bottom for faster paint) -->
-<script type="application/ld+json">
-{
-"@context":"https://schema.org",
-"@type":"LocalBusiness",
-"name":"Handyman & Home Maintenance",
-"image":"https://steely1968.github.io/images/logo.webp",
-"address":{
-"@type":"PostalAddress",
-"addressLocality":"Askern",
-"addressRegion":"Doncaster",
-"postalCode":"DN6",
-"addressCountry":"UK"
-},
-"description":"Local handyman and property maintenance services in Askern & Doncaster.",
-"url":"https://steely1968.github.io/",
-"areaServed":"DN6, Doncaster, South Yorkshire",
-"serviceType":"Handyman Services"
-}
-</script>
 
 </body>
 </html>
