--- a/contact.html
+++ b/contact.html
@@ -2,170 +2,44 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Contact Us | Home Maintenance & Handyman Services in Askern & Doncaster DN6</title>
-<meta name="description" content="Get in touch with your local handyman in Askern & Doncaster DN6. Contact us for quotes, bookings, or questions about guttering, fencing, pressure washing, gardening and all home maintenance services.">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Handyman Services</title>
 
-<link rel="canonical" href="https://steely1968.github.io/contact/">
+<!-- Preload logo -->
+<link rel="preload" href="images/logo.webp" as="image" type="image/webp">
 
-<!-- Open Graph -->
-<meta property="og:title" content="Contact Us | Home Maintenance & Handyman Services">
-<meta property="og:description" content="Contact your reliable handyman service in Askern & Doncaster DN6 for quotes and bookings.">
-<meta property="og:url" content="https://steely1968.github.io/contact/">
-<meta property="og:image" content="/logo.png">
-<meta name="twitter:card" content="summary_large_image">
-
+<!-- Basic styling for header + footer -->
 <style>
-body{margin:0;font-family:Arial,sans-serif;line-height:1.6;color:#000;background:#fff;}
-header{display:flex;align-items:center;justify-content:space-between;padding:15px 20px;background:#f4f4f4;border-bottom:2px solid #ddd;}
-header img{height:90px;}
-nav{display:flex;align-items:center;gap:15px;}
-nav a{text-decoration:none;color:#000;font-weight:bold;padding:10px 16px;border-radius:6px;}
-nav a:hover{background:#e2e2e2;}
-.call-button{background-color:#1a7f33;color:#fff;}
-.call-button:hover{background-color:#166b2b;}
-main{padding:20px;max-width:900px;margin:auto;}
-h1,h2{margin-top:10px;}
-form{background:#f8f8f8;padding:20px;border:1px solid #ddd;border-radius:10px;margin-top:20px;}
-form label{display:block;margin-top:12px;font-weight:bold;}
-form input,form textarea{width:100%;padding:12px;margin-top:6px;border:1px solid #ccc;border-radius:6px;font-size:16px;}
-form button{margin-top:20px;padding:14px 22px;font-size:17px;font-weight:bold;border:none;border-radius:6px;background-color:#1a7f33;color:#fff;cursor:pointer;}
-form button:hover{background-color:#166b2b;}
-.quick-facts{background:#f8f8f8;padding:20px;border-radius:10px;border:1px solid #ddd;margin:25px 0;}
-.quick-facts ul{padding-left:20px;}
-.map-container{margin:25px 0;border-radius:10px;overflow:hidden;border:1px solid #ddd;}
-.map-container iframe{width:100%;height:350px;border:0;}
-footer{padding:25px;text-align:center;font-size:14px;color:#666;border-top:1px solid #ddd;background:#f4f4f4;}
-footer a{color:#1864d8;font-weight:bold;text-decoration:none;}
-footer a:hover{text-decoration:underline;}
+body{margin:0;font-family:Arial,Helvetica,sans-serif;line-height:1.55;color:#111;background:#fff}
+header{display:flex;align-items:center;justify-content:space-between;padding:15px 20px;background:#f4f4f4;border-bottom:2px solid #ddd}
+header img{max-width:160px;height:auto}
+nav a{margin:0 10px;text-decoration:none;color:#333;font-weight:600}
+nav a:hover{text-decoration:underline;color:#000}
+footer{text-align:center;padding:20px;background:#f4f4f4;border-top:2px solid #ddd;margin-top:40px}
 </style>
-
-<!-- LocalBusiness Schema -->
-<script type="application/ld+json">
-{
-"@context": "https://schema.org",
-"@type": "LocalBusiness",
-"name": "Home Maintenance Services",
-"image": "https://steely1968.github.io/logo.png",
-"url": "https://steely1968.github.io/",
-"telephone": "+447735873694",
-"priceRange": "£",
-"address": {
-"@type": "PostalAddress",
-"streetAddress": "35 Airstone Road",
-"addressLocality": "Askern",
-"addressRegion": "Doncaster",
-"postalCode": "DN6 0QA",
-"addressCountry": "UK"
-},
-"geo": {
-"@type": "GeoCoordinates",
-"latitude": 53.616,
-"longitude": -1.153
-},
-"openingHoursSpecification": [{
-"@type": "OpeningHoursSpecification",
-"dayOfWeek": ["Monday","Tuesday","Wednesday","Thursday","Friday","Saturday"],
-"opens": "08:00",
-"closes": "18:00"
-}]
-}
-</script>
-
-<!-- FAQ Schema -->
-<script type="application/ld+json">
-{
-"@context": "https://schema.org",
-"@type": "FAQPage",
-"mainEntity": [
-{
-"@type": "Question",
-"name": "How can I book a handyman?",
-"acceptedAnswer": { "@type": "Answer", "text": "You can book by phone, email, or by filling in our contact form on this page." }
-},
-{
-"@type": "Question",
-"name": "Do you provide free quotes?",
-"acceptedAnswer": { "@type": "Answer", "text": "Yes, all quotes are free and we never charge a call-out fee." }
-},
-{
-"@type": "Question",
-"name": "Which areas do you cover?",
-"acceptedAnswer": { "@type": "Answer", "text": "We cover Askern, Doncaster DN6, and surrounding areas." }
-}
-]
-}
-</script>
-
 </head>
+
 <body>
 
-<header role="banner">
-<a href="/" aria-label="Home Maintenance Services Homepage">
-<img src="/logo.png" alt="Home Maintenance Services Logo">
-</a>
-<nav role="navigation" aria-label="Main menu">
-<a href="/">Home</a>
-<a href="/contact">Contact</a>
-<a href="tel:07735873694" class="call-button">Call 07735 873694</a>
+<header>
+<img src="images/logo.webp" alt="Home Maintenance Services Logo">
+<nav>
+<a href="/index.html">Home</a>
+<a href="/our-services/">Services</a>
+<a href="/location/">Locations</a>
+<a href="/contact.html">Contact</a>
 </nav>
 </header>
 
-<main role="main">
-
-<h1>Contact Us</h1>
-<p>If you’d like a quote, have a question, or want to book any of our handyman services, you can call, email, or use the contact form below. No call-out fees, fast and friendly local service.</p>
-
-<h2>Send Us a Message</h2>
-
-<form action="https://formsubmit.co/martinsteel940@gmail.com" method="POST" aria-label="Contact form">
-<input name="_redirect" type="hidden" value="https://steely1968.github.io/thank-you">
-
-<label for="name">Your Name</label>
-<input id="name" name="name" type="text" required aria-required="true">
-
-<label for="email">Email Address</label>
-<input id="email" name="email" type="email" required aria-required="true">
-
-<label for="phone">Phone Number</label>
-<input id="phone" name="phone" type="tel">
-
-<label for="message">Your Message</label>
-<textarea id="message" name="message" rows="6" required aria-required="true"></textarea>
-
-<button type="submit">Send Message</button>
-</form>
-
-<h2>Quick Facts</h2>
-<div class="quick-facts" role="region" aria-label="Quick contact facts">
-<ul>
-<li>Local handyman service in Askern & Doncaster DN6</li>
-<li>Same-day availability for many small jobs</li>
-<li>No call-out fees</li>
-<li>Free quotes and friendly service</li>
-<li>Fully insured and reliable</li>
-</ul>
-</div>
-
-<h2>Our Location</h2>
-<div class="map-container" role="region" aria-label="Business location map">
-<iframe loading="lazy" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2381.123456789!2d-1.153000!3d53.616000!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487ba1c2f1234567%3A0xabcdef1234567890!2s35%20Airstone%20Road%2C%20Askern%20DN6%200QA%2C%20UK!5e0!3m2!1sen!2suk!4v1700000000000!5m2!1sen!2suk" allowfullscreen="" referrerpolicy="no-referrer-when-downgrade" title="Map of 35 Airstone Road, Askern, Doncaster DN6"></iframe>
-</div>
-
-<h2>Prefer to Call?</h2>
-<p><strong>Phone:</strong> <a href="tel:07735873694">07735 873694</a></p>
+<!-- PAGE CONTENT STARTS HERE -->
+<main>
 
 </main>
+<!-- PAGE CONTENT ENDS HERE -->
 
-<footer role="contentinfo">
-<p>&copy; <span id="currentYear"></span> Home Maintenance Services – Askern, Doncaster DN6</p>
-<p></p><a href="https://www.facebook.com/profile.php?id=61584395621256" target="_blank" rel="noopener noreferrer">Visit our Facebook Profile</a><p></p>
-
+<footer>
+© 2025 Handyman Services | Askern & Doncaster (DN6)
 </footer>
-
-<script>
-document.getElementById("currentYear").textContent = new Date().getFullYear();
-</script>
 
 </body>
 </html>
